@@ -28,6 +28,7 @@
 #include "GotoLineDlg.h"
 #include "EncodingDlg.h"
 #include "EditorConfigWrapper.h"
+#include "DpiScale.h"
 
 // Note about lines:
 // We use three different kind of lines here:
@@ -120,7 +121,7 @@ CBaseView::CBaseView()
     m_InlineAddedBk = CRegDWORD(L"Software\\TortoiseMerge\\InlineAdded", INLINEADDED_COLOR);
     m_InlineRemovedBk = CRegDWORD(L"Software\\TortoiseMerge\\InlineRemoved", INLINEREMOVED_COLOR);
     m_ModifiedBk = CRegDWORD(L"Software\\TortoiseMerge\\Colors\\ColorModifiedB", MODIFIED_COLOR);
-    m_WhiteSpaceFg = CRegDWORD(L"Software\\TortoiseMerge\\Colors\\Whitespace", GetSysColor(COLOR_GRAYTEXT));
+    m_WhiteSpaceFg = CRegDWORD(L"Software\\TortoiseMerge\\Colors\\Whitespace", GetSysColor(COLOR_3DSHADOW));
     m_sWordSeparators = CRegString(L"Software\\TortoiseMerge\\WordSeparators", L"[]();:.,{}!@#$%^&*-+=|/\\<>'`~\"?");
     m_bIconLFs = CRegDWORD(L"Software\\TortoiseMerge\\IconLFs", 0);
     m_nTabSize = (int)(DWORD)CRegDWORD(L"Software\\TortoiseMerge\\TabSize", 4);
@@ -253,7 +254,7 @@ void CBaseView::DocumentUpdated()
     m_InlineAddedBk = CRegDWORD(L"Software\\TortoiseMerge\\InlineAdded", INLINEADDED_COLOR);
     m_InlineRemovedBk = CRegDWORD(L"Software\\TortoiseMerge\\InlineRemoved", INLINEREMOVED_COLOR);
     m_ModifiedBk = CRegDWORD(L"Software\\TortoiseMerge\\Colors\\ColorModifiedB", MODIFIED_COLOR);
-    m_WhiteSpaceFg = CRegDWORD(L"Software\\TortoiseMerge\\Colors\\Whitespace", GetSysColor(COLOR_GRAYTEXT));
+    m_WhiteSpaceFg = CRegDWORD(L"Software\\TortoiseMerge\\Colors\\Whitespace", GetSysColor(COLOR_3DSHADOW));
     m_bIconLFs = CRegDWORD(L"Software\\TortoiseMerge\\IconLFs", 0);
     m_nInlineDiffMaxLineLength = CRegDWORD(L"Software\\TortoiseMerge\\InlineDiffMaxLineLength", 3000);
     m_Eols[EOL_AUTOLINE] = m_Eols[m_lineendings==EOL_AUTOLINE
@@ -1634,6 +1635,7 @@ void CBaseView::DrawLineEnding(CDC *pDC, const CRect &rc, int nLineIndex, const 
     }
     else
     {
+        CDpiScale dpi(pDC->GetSafeHdc());
         CPen pen(PS_SOLID, 0, m_WhiteSpaceFg);
         CPen * oldpen = pDC->SelectObject(&pen);
         int yMiddle = origin.y + rc.Height()/2;
@@ -1645,10 +1647,10 @@ void CBaseView::DrawLineEnding(CDC *pDC, const CRect &rc, int nLineIndex, const 
             {
                 // multiline
                 bMultiline = true;
-                pDC->MoveTo(origin.x, yMiddle-2);
-                pDC->LineTo(origin.x+GetCharWidth()-1, yMiddle-2);
-                pDC->LineTo(origin.x+GetCharWidth()-1, yMiddle+2);
-                pDC->LineTo(origin.x, yMiddle+2);
+                pDC->MoveTo(origin.x, yMiddle-dpi.ScaleY(2));
+                pDC->LineTo(origin.x+GetCharWidth()-dpi.ScaleX(1), yMiddle-dpi.ScaleY(2));
+                pDC->LineTo(origin.x+GetCharWidth()-dpi.ScaleX(1), yMiddle+dpi.ScaleY(2));
+                pDC->LineTo(origin.x, yMiddle+dpi.ScaleY(2));
             }
             else if (GetLineLength(nLineIndex) == 0)
                 bMultiline = true;
@@ -1663,32 +1665,32 @@ void CBaseView::DrawLineEnding(CDC *pDC, const CRect &rc, int nLineIndex, const 
             case EOL_AUTOLINE:
             case EOL_CRLF:
                 // arrow from top to middle+2, then left
-                pDC->MoveTo(origin.x+GetCharWidth()-1, rc.top+1);
-                pDC->LineTo(origin.x+GetCharWidth()-1, yMiddle);
+                pDC->MoveTo(origin.x+GetCharWidth()-dpi.ScaleX(1), rc.top+dpi.ScaleY(1));
+                pDC->LineTo(origin.x+GetCharWidth()-dpi.ScaleX(1), yMiddle);
             case EOL_CR:
                 // arrow from right to left
-                pDC->MoveTo(origin.x+GetCharWidth()-1, yMiddle);
+                pDC->MoveTo(origin.x+GetCharWidth()-dpi.ScaleX(1), yMiddle);
                 pDC->LineTo(origin.x, yMiddle);
-                pDC->LineTo(origin.x+4, yMiddle+4);
+                pDC->LineTo(origin.x+dpi.ScaleX(4), yMiddle+dpi.ScaleY(4));
                 pDC->MoveTo(origin.x, yMiddle);
-                pDC->LineTo(origin.x+4, yMiddle-4);
+                pDC->LineTo(origin.x+dpi.ScaleX(4), yMiddle-dpi.ScaleY(4));
                 break;
             case EOL_LFCR:
                 // from right-upper to left then down
-                pDC->MoveTo(origin.x+GetCharWidth()-1, yMiddle-2);
-                pDC->LineTo(xMiddle, yMiddle-2);
-                pDC->LineTo(xMiddle, rc.bottom-1);
-                pDC->LineTo(xMiddle+4, rc.bottom-5);
-                pDC->MoveTo(xMiddle, rc.bottom-1);
-                pDC->LineTo(xMiddle-4, rc.bottom-5);
+                pDC->MoveTo(origin.x+GetCharWidth()-dpi.ScaleX(1), yMiddle-dpi.ScaleY(2));
+                pDC->LineTo(xMiddle, yMiddle-dpi.ScaleY(2));
+                pDC->LineTo(xMiddle, rc.bottom-dpi.ScaleY(1));
+                pDC->LineTo(xMiddle+dpi.ScaleX(4), rc.bottom-dpi.ScaleY(5));
+                pDC->MoveTo(xMiddle, rc.bottom-dpi.ScaleY(1));
+                pDC->LineTo(xMiddle-dpi.ScaleX(4), rc.bottom-dpi.ScaleY(5));
                 break;
             case EOL_LF:
                 // arrow from top to bottom
                 pDC->MoveTo(xMiddle, rc.top);
-                pDC->LineTo(xMiddle, rc.bottom-1);
-                pDC->LineTo(xMiddle+4, rc.bottom-5);
-                pDC->MoveTo(xMiddle, rc.bottom-1);
-                pDC->LineTo(xMiddle-4, rc.bottom-5);
+                pDC->LineTo(xMiddle, rc.bottom-dpi.ScaleY(1));
+                pDC->LineTo(xMiddle+dpi.ScaleX(4), rc.bottom-dpi.ScaleY(5));
+                pDC->MoveTo(xMiddle, rc.bottom-dpi.ScaleY(1));
+                pDC->LineTo(xMiddle-dpi.ScaleX(4), rc.bottom-dpi.ScaleY(5));
                 break;
             case EOL_FF:    // Form Feed, U+000C
             case EOL_NEL:   // Next Line, U+0085
@@ -2039,8 +2041,8 @@ void CBaseView::DrawSingleLine(CDC *pDC, const CRect &rc, int nLineIndex)
         int y = rc.top + (rc.bottom-rc.top)/2;
         xpos -= m_nOffsetChar * GetCharWidth();
 
+        CDpiScale dpi(pDC->GetSafeHdc());
         CPen pen(PS_SOLID, 0, m_WhiteSpaceFg);
-        CPen pen2(PS_SOLID, 2, m_WhiteSpaceFg);
         while (*pszChars)
         {
             switch (*pszChars)
@@ -2057,11 +2059,11 @@ void CBaseView::DrawSingleLine(CDC *pDC, const CRect &rc, int nLineIndex)
                         if ((xposreal > 0) || (nSpaces > 0))
                         {
                             CPen * oldPen = pDC->SelectObject(&pen);
-                            pDC->MoveTo(xposreal + rc.left, y);
-                            pDC->LineTo((xpos + nSpaces * GetCharWidth()) + rc.left - 2, y);
-                            pDC->LineTo((xpos + nSpaces * GetCharWidth()) + rc.left - 6, y - 4);
-                            pDC->MoveTo((xpos + nSpaces * GetCharWidth()) + rc.left - 2, y);
-                            pDC->LineTo((xpos + nSpaces * GetCharWidth()) + rc.left - 6, y + 4);
+                            pDC->MoveTo(xposreal + rc.left + dpi.ScaleX(2), y);
+                            pDC->LineTo((xpos + nSpaces * GetCharWidth()) + rc.left - dpi.ScaleX(2), y);
+                            pDC->LineTo((xpos + nSpaces * GetCharWidth()) + rc.left - dpi.ScaleX(6), y - dpi.ScaleY(4));
+                            pDC->MoveTo((xpos + nSpaces * GetCharWidth()) + rc.left - dpi.ScaleX(2), y);
+                            pDC->LineTo((xpos + nSpaces * GetCharWidth()) + rc.left - dpi.ScaleX(6), y + dpi.ScaleY(4));
                             pDC->SelectObject(oldPen);
                         }
                     }
@@ -2073,13 +2075,13 @@ void CBaseView::DrawSingleLine(CDC *pDC, const CRect &rc, int nLineIndex)
                 {
                     xpos += pDC->GetTextExtent(pLastSpace, (int)(pszChars - pLastSpace)).cx;
                     pLastSpace = pszChars + 1;
-                    // draw a small dot
                     if (xpos >= 0)
                     {
-                        CPen * oldPen = pDC->SelectObject(&pen2);
-                        pDC->MoveTo(xpos + rc.left + GetCharWidth() / 2 - 1, y);
-                        pDC->LineTo(xpos + rc.left + GetCharWidth()/2+1, y);
-                        pDC->SelectObject(oldPen);
+                        const int cxWhitespace = dpi.ScaleX(2);
+                        const int cyWhitespace = dpi.ScaleY(2);
+                        // draw 2-logical pixel rectangle, like Scintilla editor.
+                        pDC->FillSolidRect(xpos + rc.left + GetCharWidth() / 2 - cxWhitespace/2, y,
+                                           cxWhitespace, cyWhitespace, m_WhiteSpaceFg);
                     }
                     xpos += GetCharWidth();
                     nChars++;
