@@ -12,6 +12,8 @@ Version 1.9.6
        blurriness in high dpi mode. (Ivan Zhakov)
 - BUG: Icons in the log dialog filter do not render correctly in
        high dpi mode. (Ivan Zhakov)
+- BUG: TortoiseMerge: scale whitespace and newline symbol glyphs on High-DPI
+       displays when Show Whitespaces option is enabled. (Ivan Zhakov)
 
 Version 1.9.5
 - BUG: The "go to next diff" in TortoiseMerge stopped at
